force-app/main/default/objects/Default_Lead_Team__c/Default_Lead_Team__c.object-meta.xml
<CustomObject>
    <label>Default Lead Team</label>
    <nameField>
        <displayFormat>DLTN-{00000000}</displayFormat>
        <label>Default Lead Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Lead Teams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>