force-app/main/default/objects/Default_Lead_Team__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Default Lead Team</relationshipLabel>
    <relationshipName>Default_Lead_Teams1</relationshipName>
    <type>Lookup</type>
</CustomField>