force-app/main/default/objects/Default_Lead_Team__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Team_Role</valueSetName>
    </valueSet>
</CustomField>