force-app/main/default/objects/Default_Lead_Team__c/listViews/My_Team.listView-meta.xml
<ListView>
    <fullName>My_Team</fullName>
    <columns>NAME</columns>
    <columns>Team_Member__c</columns>
    <columns>Team_Role__c</columns>
    <columns>Lead_Access__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Team</label>
</ListView>